# Compyutinator-Code

./: .gitignore  README.md  action_pad.py  app.manifest  audio_handler.py  auratext_log.txt  code_editor.py  computinator_data.db  config.json  custom_tree_view.py  dark_red_style.qss  explorinator.py  file_explorer.py  file_structure_analyzer.py  index_glows.py  main.py  process_manager.py  profile_results.txt  pyproject.toml  requirements.txt  secret.key  seeds.db  setup.py  terminal_widget.py  theme_manager.py
.theia/: launch.json
DEV/: README.md  buildtools.py  more_buildtools.py  plain_text_editor.py  serialization_extension.py  setup.py  test_microphone.py  utils.py  workspace.py
GUX/: action_pad.py  advanced_browser.py  ai_chat-ollama-almost-working.py  ai_chat.py  calculator.py  code_editor.py  context_picker_dialog.py  custom_tree_view.py  debuuginator.py  diff_merger copy.py  diff_merger.py  different.py  file_explorer.py  file_search_widget.py  file_tree_view.py  fileset_manager_widget.py  find_and_replace_and_cursors.py  html_viewer.py  knowledge_graph_view.py  log_viewer_widget.py  markdown_viewer.py  media_player.py  merge_widget.py  model_downloader.py  overlay.py  radial_menu.py  search_dialog.py  selectable_mexageboss.py  settings_dialog.py  splash_process.py  splash_screen.py  status_dialog.py  sticky_note.py  terminal_widget.py  text_entry_widget.py  theme_builder.py  vault_graph_view.py  visual_effects.py  widget_vault.py
HMC/: LSP_manager.py  action_handlers.py  ai_model_manager.py  ai_model_managerollama-almost-working.py  audio_handler.py  (+29 more)
(+30 files in other folders)
